fixed and aligned some styling.
Fixed bug where empty form was showing boxes.

Added some comments

--- a/core/frontend/src/css/app-components/_checkbox-filter.scss
+++ b/core/frontend/src/css/app-components/_checkbox-filter.scss
@@ -197,3 +197,7 @@ $default-spacing-unit: 5px;
 .month_year_widget > .govuk-label--s{
     margin-top: 0px;
 }
+
+#search-form-fields .month_year_widget  .govuk-date-input__label{
+    font-size: 16px;
+}
